<resources>
    <string name="app_name">LostRealm</string>
    <string name="app_version">Version: 1.0.0</string>
    <string name="text_main_button">Touch the Screen</string>
    <string name="tv_select">Choose a Character</string>
    <string name="todo">TODO</string>
    <string name="test">Test</string>

    <!-- SETTINGS -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="music">Music</string>
    <string name="desc_music">Turn on background music</string>
    <string name="volume">Volume</string>

    <!-- Detail Character -->
    <string name="weight_vulnerability">Weight/vulnerability:</string>
    <string name="special_advantages">Special Advantages</string>
    <string name="development">Development:</string>
    <string name="options">%1$s Options</string>
    <string name="start_dwelling">Start Dwelling</string>
    <string name="vp_treasures">Great Treasures</string>
    <string name="vp_spells">Usable Spells</string>
    <string name="vp_fame">Fame</string>
    <string name="vp_notoriety">Notoriety</string>
    <string name="vp_gold">Great Gold</string>
    <string name="victory_points">Victory Points %1$s/5</string>
    <string name="_0">0</string>
    <string name="type_color">(%1$s/%2$s)</string>
    <string name="spells">Chose %1$s Spells type:</string>

    <string-array name="weight">
        <item>LIGHT</item>
        <item>MEDIUM</item>
        <item>HEAVY</item>
        <item>TREMENDOUS</item>
    </string-array>





    <string name="title_activity_player">PlayerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Characters</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_player">Add Player</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>



    <string name="menu_map">Map</string>
    <string name="vibrate">Vibrate</string>
    <string name="desc_vibrate">Vibrate when new character joins</string>
    <string name="new_game">Restart - New Game</string>
    <string name="go"><![CDATA[>]]></string>
    <string name="desc_sound">Volume of sound effects</string>


</resources>