<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_papiro"
    tools:context=".ui.settings.SettingsActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/menu_settings"
        android:textAlignment="center"
        android:textSize="36sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/todo"
            app:tint="@color/primary"
            android:src="@drawable/ic_vibrate"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/vibrate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_vibrate"/>

        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/primary"
            android:checked="true"
            android:layout_marginHorizontal="16dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/todo"
            app:tint="@color/primary"
            android:src="@drawable/ic_volume"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/volumeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            android:value="40"
            android:valueFrom="0"
            android:valueTo="100"
            app:thumbColor="@color/primary"
            app:trackColorActive="@color/primary" />

        </LinearLayout>

    </LinearLayout>
