<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tool:text="@string/vp_treasures"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="8dp"
        android:tint="@color/primary"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_arrow_back_ios_24"
        tool:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@id/ib_left"
        app:layout_constraintTop_toTopOf="parent"
        tool:text="0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/todo"
        android:padding="8dp"
        android:tint="@color/primary"
        app:layout_constraintStart_toEndOf="@id/tv_value"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_arrow_forward_ios_24" />

</androidx.constraintlayout.widget.ConstraintLayout>